# pyrurl

./: Cargo.toml  pyproject.toml
src/: lib.rs
tests/: benchmark.py  test_pyrurl.py
