[package]
authors = ["euri10 <benoit.barthelet@gmail.com>"]
name = "pyrurl"
version = "0.1.0"
edition = "2018"

[lib]
name = "pyrurl"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.2"
#features = ["extension-module"]
[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
url = "2.2.2"