[tool.poetry]
name = "pyrurl"
version = "0.1.0"
description = ""
authors = ["euri10 <benoit.barthelet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
maturin = "^0.10.6"

[build-system]
requires = ["maturin>=0.10,<0.11"]
build-backend = "maturin"